--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,6 +1,6 @@
-<h1>Create your Movie type</h1>
-<p><%= simple_form_for [@list] do |f|  %>
-  <%= f.input :name %>
-  <%= f.submit %>
+<h1>Create your List type</h1>
+<p><%= simple_form_for @list do |f|  %>
+  <%= f.input :name, label: "Type your name" %>
+  <%= f.submit "Save" %>
 <% end %>
 </p>
