--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,1 +1,20 @@
 <h1><%= @list.name %></h1>
+
+<div>
+  <%= link_to "Create a bookmark", new_list_bookmark_path(@list) %>
+</div>
+
+<div>
+<p> <% @bookmarks.each do |bookmark| %> 
+      <ul> <%= bookmark.comment %> </ul>
+    <% end %></p>
+</div>
+
+<div>
+<p> <% @movies.each do |movie| %> 
+      <ul> <%= movie.title %>
+           <%= movie.overview %>
+           <%= movie.post_url %>
+           <%= movie.rating %> </ul>
+    <% end %></p>
+</div>
