--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,20 +1,20 @@
-<h1><%= @list.name %></h1>
-
-<div>
+<div class="container">
+  <div class="Title">
+    <h2><%= @list.name %></h2>
+  </div>
+  
+  <div class="card-trip">
+    <% @list.movies.each do |movie| %> 
+      <%= image_tag movie.post_url %>
+      <div class="card-trip-infos">
+        <div>
+          <h1> <%= movie.title %> </h1> 
+          <p> <%= movie.overview %> </p> 
+        </div>
+        <h2 class="card-trip-pricing"> <%= "⭐" * movie.rating %> </h2>
+    <% end %>
+      </div>
+  </div>
+               
   <%= link_to "Create a bookmark", new_list_bookmark_path(@list) %>
-</div>
-
-<div>
-<p> <% @bookmarks.each do |bookmark| %> 
-      <ul> <%= bookmark.comment %> </ul>
-    <% end %></p>
-</div>
-
-<div>
-<p> <% @movies.each do |movie| %> 
-      <ul> <%= movie.title %>
-           <%= movie.overview %>
-           <%= movie.post_url %>
-           <%= movie.rating %> </ul>
-    <% end %></p>
 </div>
